--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "vercel-build": "vercel build --no-cache"
+    "vercel-build": "vercel build"
   },
   "eslintConfig": {
     "extends": [
